1. Навигация по отделениям. 2. Исправление бд. - ближе к реалиционной. 3. Продумать навигацию!!!

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,4 +2,5 @@ extends layout
 block content
 	h1 #{text}
 	- each item in Faculties
-		a(href="Departments/"+item.Name)= item.Name
+		p
+			a(href="Departments/Факультет/"+item.Name)= item.Name
