--- a/app/views/ads/ad.jade
+++ b/app/views/ads/ad.jade
@@ -6,8 +6,9 @@ block content
 	P Метка: #{Ad.Tag}
 	p Комментарии:
 	p
-		- each Comment in Ad.Comments
-			p= Comment
+		- if (Ad.Comments)
+			- each Comment in Ad.Comments
+				p= Comment
 	form(method="post")
 		input(type="text" name="commentText")
 		input(type="submit" value="Добавить")
