Начало работы над авторизацией/аутентификацией. Добалена регитсрация

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -4,3 +4,7 @@ block content
 	- each item in Faculties
 		p
 			a(href="Departments/"+item._id)= item.Name
+	p
+		a(href="Users/create/") Регистрация
+	p
+		a(href="Users/login/") Вход
