Начало работы с модулем passort

--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -3,9 +3,9 @@ block content
 	form(action="/Users/enter/" method="post") 	
 		p Имя:
 		p
-			input(type="text" name="Name")
+			input(type="text" name="username")
 		p Пароль:
 		p
-			input(type="password" name="Password")
+			input(type="password" name="password")
 		p
 			input(type="submit" value="Акей")
