--- a/app/views/users/create.jade
+++ b/app/views/users/create.jade
@@ -3,10 +3,10 @@ block content
 	form(action="/Users/new/" method="post") 	
 		p Имя:
 		p
-			input(type="text" name="Name")
+			input(type="text" name="username")
 		p Пароль:
 		p
-			input(type="password" name="Password")
+			input(type="password" name="password")
 		p
 			input(type="submit" value="Акей")
 		
