1. Исправление маршрутов 2. Исправление схем 3. Добавлена подпись автора для комента и объявления

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,7 +5,7 @@ block content
 		p
 			a(href="Departments/"+item._id)= item.Name
 	p
-		a(href="Users/create/") Регистрация		
+		a(href="Users/signup/") Регистрация		
 	p 
 		- if (!user)
 			a(href="Users/login/") Вход
