--- a/app/views/users/create.jade
+++ b/app/views/users/create.jade
@@ -1,6 +1,6 @@
 extends ../layout
 block content
-	form(action="/Users/new/" method="post") 	
+	form(action="/Users/signup/" method="post") 	
 		p Имя:
 		p
 			input(type="text" name="username")
