--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -1,6 +1,6 @@
 extends ../layout
 block content
-	form(action="/Users/enter/" method="post") 	
+	form(action="/Users/login/" method="post") 	
 		p Имя:
 		p
 			input(type="text" name="username")
