--- a/app/views/ads/ad.jade
+++ b/app/views/ads/ad.jade
@@ -4,11 +4,14 @@ block content
 	p Текст:
 	p #{Ad.Text}
 	P Метка: #{Ad.Tag}
+	P Автор: #{Ad.User.Name}
 	p Комментарии:
 	p
 		- if (Ad.Comments)
 			- each Comment in Ad.Comments
-				p= Comment
+				p= Comment.Text
+				p= Comment.User.Name
+				p= Comment.Data
 	form(method="post")
 		input(type="text" name="commentText")
 		input(type="submit" value="Добавить")
