1. Начало весртки, добавлены header, footer, menu 2. Исправление реистрации - доавлено ФИО 3. Исправлена настройка модулей body-parser и session. - больне не вылетает ошибок 4. express-session теперь пише в mongoDB

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,13 +1,11 @@
 extends layout
-block content
-	h1 #{text}
-	- each item in Faculties
-		p
-			a(href="Departments/"+item._id)= item.Name
-	p
-		a(href="Users/signup/") Регистрация		
-	p 
-		- if (!user)
-			a(href="Users/login/") Вход
-		- if (user)			
-			a(href="Users/logout/") Выход
+block content	
+	style
+		include ../public/stylesheet/main.css
+	#main
+		include menu
+		#text
+			h1 #{text}
+			- each item in Faculties
+				p
+					a(href="Departments/"+item._id)= item.Name	
