1. Меню переехало в header 2. Началов веркстки => footer header частично 3. Изменена начальная страница на нормальную 4. Добавлина стартовая страница для поиска по отеделениям

--- a/public/stylesheet/footer.css
+++ b/public/stylesheet/footer.css
@@ -1,9 +1,10 @@
 footer{
-	margin: 10px;
-    font-style: italic;
+    background-color: #f4f4f4;
+    height: 20px;
+    min-width: 1200px;
+    text-align: center;
 }
-
 footer div {
-    display: inline-block;
-    margin: 5px;
+    display: inline;
+    margin-left: 5px;    
 }
