--- a/views/ads/ad_create.jade
+++ b/views/ads/ad_create.jade
@@ -1,14 +1,11 @@
 extends ../layout
 block content
 	form(action="/Ads/new/" + _tableId method="post") 	
-		p Заголовок:
 		p
-			input(type="text" name="Name")
-		p Текст:
+			input(type="text" name="Name" placeholder="Заголовок")
 		p
-			input(type="text" name="Text")
-		p Метка:
+			textarea(name="Text" placeholder="Текс объявления")
 		p
-			input(type="text" name="Tag")
+			input(type="text" name="Tag" placeholder="#Тэг")
 		p
 			input(type="submit" value="Отправить")
