--- a/public/stylesheet/header.css
+++ b/public/stylesheet/header.css
@@ -2,6 +2,11 @@ header{
     background-color: #f4f4f4;
     height: 20px;
     min-width: 1200px;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 header div {
