--- a/views/ads/ad.jade
+++ b/views/ads/ad.jade
@@ -19,6 +19,6 @@ block content
 						.comment_text= Comment.Text						
 						.comment_date= Comment.Data
 		form(method="post")
-			textarea(type="text" name="commentText" placeholder="Коментарий")
+			textarea(type="text" required name="commentText" placeholder="Коментарий")
 			input(type="submit" value="Добавить")
 			input(type="hidden" value="put" name="_method")
