--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -3,9 +3,9 @@ block content
 	form(action="/Users/login/" method="post") 	
 		p Имя:
 		p
-			input(type="text" name="username")
+			input(type="text" required name="username")
 		p Пароль:
 		p
-			input(type="password" name="password")
+			input(type="password" required name="password")
 		p
 			input(type="submit" value="Акей")
