1. Добавлен личный кабинет 2. Можно добалвять в нем подрахделения 3. Можно удалять подразделения

--- a/views/header.jade
+++ b/views/header.jade
@@ -18,7 +18,7 @@ header
 	#help-menu
 		- if (user)
 			.button#profile
-				a(href='/Users/' + user._id) Личный кабинет
+				a(href='/Users/account/') Личный кабинет
 			.button#logout
 				a(href='/Users/logout') Выход
 		- else
