--- a/views/departments/department.jade
+++ b/views/departments/department.jade
@@ -3,6 +3,7 @@ block content
 	h1 #{BaseDepartment.Type} : #{BaseDepartment.Name} 
 	p
 		a(href="/Tables/"+ BaseDepartment.TableId) Доска объявлений
-	- each SubDepartment in SubDepartments
-		p
-			a(href="/Departments/"+SubDepartment._id)= SubDepartment.Type + ' ' + SubDepartment.Name
+	- if (SubDepartments)
+		- each SubDepartment in SubDepartments
+			p
+				a(href="/Departments/"+SubDepartment._id)= SubDepartment.Type + ' ' + SubDepartment.Name
