1. Добавлено логирование debug 2. Добавлена частичная оботка ошибок + модуль http-error 3. Рефакториг поиска оплдних обявлений + модуль async

--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,8 @@
-doctype html
-html(lang="en")
-	head
-		title Error!
-	body
-		p #{message}
+extends layout
+block content	
+	br
+	br
+	br
+	br
+	p #{error}
+	p #{message}
