--- a/views/admin/departments.jade
+++ b/views/admin/departments.jade
@@ -1,5 +1,8 @@
 extends ../layout
 block content
+	script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
+	script(type="text/javascript")
+		include ../../public/javascript/root_departments.js
 	br
 	br
 	br
@@ -8,4 +11,5 @@ block content
 			.user
 				.Type= Department.Type
 				.Name= Department.Name
+				.delete_dapartment(value= Department._id)= 'Удалить'
 			br
