Реализован поиск по объявлениям

--- a/views/header.jade
+++ b/views/header.jade
@@ -9,7 +9,7 @@ header
 		.button
 			a(href='/Departments') Подразделение		
 		.button
-			a(href='/nop') Поиск по объявлениям
+			a(href='/Ads/find/') Поиск по объявлениям
 		- if (user)
 			.button
 				a(href='/Users/Departments') Мои подразделения
