--- a/views/admin/ads.jade
+++ b/views/admin/ads.jade
@@ -14,7 +14,7 @@ block content
 				.text= Ad.Text
 				.buttom
 					.tag= 'Метка: ' + Ad.Tag
-					.date= Ad.Date
+					.date= Ad.getDate()
 					.user= 'Автор: ' + Ad.User.Name
 					.detele_ad(value= Ad._id)= 'Удалить'
 	- if(Ads.length == 10)
