--- a/views/admin/root.jade
+++ b/views/admin/root.jade
@@ -1,12 +1,11 @@
 extends ../layout
 block content
-	br
-	br
-	p
-		WellCome to RootMenu, #{admin.AdminName}!
-	P
-		a(href="/Admin/users") Юзвери
-	P
-		a(href="/Admin/departments") Подразделения
-	P
-		a(href="/Admin/ads") Объявления
+	#main
+		p
+			WellCome to RootMenu, #{admin.AdminName}!
+		P
+			a(href="/Admin/users") Юзвери
+		P
+			a(href="/Admin/departments") Подразделения
+		P
+			a(href="/Admin/ads") Объявления
