--- a/views/tables/next_ads.jade
+++ b/views/tables/next_ads.jade
@@ -6,5 +6,5 @@
 			.text= Ad.Text
 			.buttom
 			.tag= 'Метка: ' + Ad.Tag
-			.date= Ad.Date
+			.date= Ad.getDate()
 			.user= 'Автор: ' + Ad.User.Name
