--- a/views/admin/users.jade
+++ b/views/admin/users.jade
@@ -3,14 +3,12 @@ block content
 	script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
 	script(type="text/javascript")
 		include ../../public/javascript/root_users.js
-	br
-	br
-	br
-	- if (Users)
-		- each User in Users
-			.user
-				.FistName= User.FistName
-				.SecondName= User.SecondName
-				.ThirdName= User.ThirdName
-				.detele_user(value= User._id)= 'Удалить'
-			br
+	#main
+		- if (Users)
+			- each User in Users
+				.user
+					.FistName= User.FistName
+					.SecondName= User.SecondName
+					.ThirdName= User.ThirdName
+					.detele_user(value= User._id)= 'Удалить'
+				br
