--- a/views/ads/ad_result.jade
+++ b/views/ads/ad_result.jade
@@ -1,9 +1,7 @@
 extends ../layout
 block content
-	br
-	br
-	br
-	br
+	style
+		include ../../public/stylesheet/table.css
 	#main
 		#ads
 			- if (Ads)
@@ -14,7 +12,7 @@ block content
 						.text= Ad.Text
 						.buttom
 							.tag= 'Метка: ' + Ad.Tag
-							.date= Ad.Date
+							.date= Ad.getDate()
 							.user= 'Автор: ' + Ad.User.Name
 					br
 					br
