--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html(lang="en")
 		block head
 			title #{title}
 			meta(charset="utf-8")
+	style
+		include ../public/stylesheet/layout.css
 	body
 		include header		
 		block content
