--- a/views/footer/help.jade
+++ b/views/footer/help.jade
@@ -2,4 +2,4 @@ extends ../layout
 block content
 	#main
 		#help
-			Если очень хотите нам чем-бидуь помочь и не знаете как нас наити, ппосомтрите по ссылке "Обратная связь"
+			Если очень хотите нам чем-бидуь помочь и не знаете как нас наити, посомтрите по ссылке "Обратная связь"
