--- a/views/footer/developers.jade
+++ b/views/footer/developers.jade
@@ -2,4 +2,4 @@ extends ../layout
 block content
 	#main
 		#developers
-			Это учебный проект, выполеннный в качестве курсовой работы по дисцилинам "Конструирование програмнго обеспечения", "Конструирование интернет приложений", "Проектирование человекомашинного интерфейса" студентом группы 3-42 факульета ИВТФ Ивановского Энергетического Университета им. В. И. Ленина Суховом Виталием Владимировичем.
+			Это учебный проект, выполеннный в качестве курсовой работы по дисциплинам "Конструирование программнго обеспечения", "Конструирование интернет-приложений", "Проектирование человекомашинного интерфейса" студентом группы 3-42 факультета ИВТФ Ивановского Энергетического Университета им. В. И. Ленина Суховым Виталием Владимировичем.
